start of search bar, needs styles

--- a/components/src/pages/index.astro
+++ b/components/src/pages/index.astro
@@ -8,7 +8,11 @@ const pageTitle = "Trabajos Que Ayudan";
     <div class="text"> 
       <h1>Trabajos Que Ayudan</h1>
       <p>Viva siempre el trabajo y la paz</p>
-      <a href="#" class="btn">Shop Now</a>
+      <div class="input-box">
+        <i class="uil uil-search"></i>
+        <input type="text" placeholder="Search here..." />
+        <a class="button" id="maGlass" style="rotate: -45deg;">&#9906;
+        </a>
       
     </div>
     
