--- a/components/src/components/Servicios/Carrusell.astro
+++ b/components/src/components/Servicios/Carrusell.astro
@@ -71,9 +71,8 @@ productContainers.forEach((item, i) => {
 
 <style>
   .product-carousel {
-   
     position: relative;
-    margin-bottom: 4rem;
+    margin-bottom: 1.5rem;
   }
 
   .product-container {
@@ -86,7 +85,7 @@ productContainers.forEach((item, i) => {
   .carrusell-product {
     display: flex;
     flex: 0 0 auto;
-    margin-right: 50px;
+    margin-right: 0px;
     flex-direction: column;
     align-items: center;
     width: 8rem;
@@ -100,8 +99,8 @@ productContainers.forEach((item, i) => {
   position: relative;
   width: 100%;
   overflow: hidden;
-  width: 5rem;
-  height: 5rem;
+  width: 4rem;
+  height: 4.5rem;
   }
 
   .product-info{
@@ -113,8 +112,7 @@ productContainers.forEach((item, i) => {
     width: 10rem;
     object-fit: cover;
   }
-
-.pre-btn,
+  .pre-btn,
 .nxt-btn {
   border: none;
   width: 10vw;
@@ -124,7 +122,7 @@ productContainers.forEach((item, i) => {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, #fff 100%);
+  background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, #f4f4f4 100%);
   cursor: pointer;
   z-index: 8;
 }
@@ -147,6 +145,51 @@ productContainers.forEach((item, i) => {
   width: 30px;
   height: 30px;
 }
+
+@media all and (max-width: 720px) {
+
+  .pre-btn{
+    display: none;
+  }
+  .nxt-btn{
+    display: none;
+  }
+  .product-carousel:hover {
+  .pre-btn,
+.nxt-btn {
+  border: none;
+  width: 10vw;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, #f4f4f4 100%);
+  cursor: pointer;
+  z-index: 8;
+}
+.pre-btn {
+  left: 0;
+  transform: rotate(180deg);
+}
+
+.pre-btn img{
+  left: 0;
+  width: 30px;
+  height: 30px;
+}
+
+.nxt-btn {
+  right: 0;
+}
+
+.nxt-btn img{
+  width: 30px;
+  height: 30px;
+}
+}
+
 
 </style>
 
