--- a/components/src/components/NavLines.astro
+++ b/components/src/components/NavLines.astro
@@ -1,12 +1,16 @@
 ---
+import LocationSmall from '../components/location/locationSmall.astro';
+
 import MobileNav from "./MobileNav.astro";
 ---
 <div id="container">
     <div class="navLines" id="navLines">
+        <LocationSmall></LocationSmall>
         <div class="nav-icon menu-icon" id="menu-toggle">
             <!-- <a href="#" id="navIcon" class="nav-icon-000">&#9776;</a>
             <a href="#" id="navIcon" class="nav-icon-000 hidden">&#9932;</a> -->
         </div>
+        
         <MobileNav />
     </div>
 </div>
