--- a/components/src/components/MobileNav.astro
+++ b/components/src/components/MobileNav.astro
@@ -19,15 +19,16 @@ const pageTitle: string = "TQA";
                 <div class="Navcontainer">
                     <nav>
                         <ul id="mobileMenu">
-                            <li><a href="#">Home</a></li>
+                            <li><a href="/">Home</a></li>
                             <li><a href="servicios">Servicios</a></li>
                             <li><a href="#">Ser Proveedor</a></li>
                             <li><a href="#">Carrito</a></li>
+                            <li><a href="signup">registrarse</a></li>
                         </ul>
                     </nav>
                 </div>
 
-                <a id="btn-login"> <p>Sign In</p></a>
+                <a id="btn-login" > <p>Sign In</p></a>
                 <div class="containerLogin">
                     <label for="uname"><b>Username</b></label>
                     <input
