bajar la ubicacion

--- a/components/src/components/market/filtro.astro
+++ b/components/src/components/market/filtro.astro
@@ -1,9 +1,7 @@
 ---
 ---
 
-<script>
 
-</script>
 
 <section class="filter-component">
 
@@ -33,7 +31,7 @@
                             value="3c7cf7ef-730f-431f-9072-26bc39f7c022" checked="" />
                         <div class="">
                             <span class="">
-                                Elegido para ti (predeterminado)</span>
+                                Elegido para ti<br> (predeterminado)</span>
                         </div>
                     </label><label data-baseweb="radio" class="">
                         <div class="">
