--- a/components/src/components/Servicios/TodosLosServicios.astro
+++ b/components/src/components/Servicios/TodosLosServicios.astro
@@ -1,4 +1,6 @@
 ---
+import LocationSmall from '../location/locationSmall.astro';
+
 import CuadroServicio from './CuadroServicio.astro'
 ---
 
@@ -6,7 +8,7 @@ import CuadroServicio from './CuadroServicio.astro'
 
     <h1>Nuestros servicios</h1>
     
-    <p>En la zona de Alajuela: </p>
+    <p>En la zona de : </p><LocationSmall></LocationSmall>
     
     <div class="flex-container-servicio">
         <CuadroServicio> 
