--- a/components/src/components/location/locationSmall.astro
+++ b/components/src/components/location/locationSmall.astro
@@ -14,7 +14,7 @@
     <div data-testid="delivery-address-label" class="">
         Curridabat
     </div><span class="">&nbsp;&nbsp;|&nbsp;&nbsp;</span>
-    <div class="bd">Ahora</div>
+    <div class="bd">GAM</div>
 </div>
 
 <style>
@@ -32,6 +32,10 @@
     padding-left: 0.4em;
     padding-right: 0.4em;
     
+}
+
+.Container-Location-small .inbetween {
+ width: 0.3em;
 }
 
 </style>
