--- a/components/src/pages/jardineriaFernando.astro
+++ b/components/src/pages/jardineriaFernando.astro
@@ -18,7 +18,11 @@ const calificacion = "4.7"
                 <p class="ubi">Moravia</p>
             </div>
             <p id="descripcion">Somos una empresa líder en el sector de jardinería, dedicada a crear espacios verdes excepcionales. Nuestro enfoque se centra en el diseño innovador, la calidad en la ejecución y el compromiso con la satisfacción del cliente. Con un equipo de profesionales apasionados y creativos, transformamos cualquier área exterior en un oasis de belleza natural y tranquilidad. Ya sea que necesites un jardín residencial, un paisaje corporativo o un proyecto público, estamos comprometidos en superar tus expectativas y hacer de tu visión una realidad impresionante.</p>
-            <button class="hire-button">Ver disponibilidad</button>
+            <!-- <button class="hire-button">Ver disponibilidad</button> -->
+            <hr>
+            <div>
+                <CalendarioAgenda />
+            </div>
         </div>
         <div class="profile">
             <img src="https://st4.depositphotos.com/1017986/39200/i/450/depositphotos_392006782-stock-photo-happy-man-in-apron-at.jpg" alt="Benefit 2" class="imagen-cuadro-servicio">
@@ -51,6 +55,7 @@ const calificacion = "4.7"
 .profile {
     text-align: center;
     margin-bottom: 20px;
+    margin-left: 40px; 
     display: flex;
     flex-direction: column;
     align-items: center;
