--- a/components/src/Styles/global.css
+++ b/components/src/Styles/global.css
@@ -80,7 +80,7 @@ p {
   
   #container #navLines{
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     margin: 0 auto;
     align-items: center;
   }
