--- a/components/src/components/NavLines.astro
+++ b/components/src/components/NavLines.astro
@@ -1,5 +1,5 @@
 ---
-
+import LocationSmall from "./location/locationSmall.astro";
 import MobileNav from "./MobileNav.astro";
 const pageTitle: string = "TQA";
 ---
