--- a/components/src/components/SearchBar.astro
+++ b/components/src/components/SearchBar.astro
@@ -4,12 +4,13 @@
 <form id="content">
     <input type="text" name="input" class="input" id="search-input">
     <button type="reset" class="search" id="search-btn"></button>
-  </form>
+</form>
 
 <style>
-
-
 #content {
+display: inline-flex;
+  color: #fff;
+  margin: 0;
   position: relative;
   height: 50px;
   width: 300px;
@@ -29,8 +30,8 @@
   -webkit-animation-iteration-count: 1;
   animation-iteration-count: 1;
 }
-
-input {
+input{
+    position: absolute;
   box-sizing: border-box;
   width: 50px;
   height: 50px;
@@ -54,17 +55,12 @@ input {
 }
 
 .search {
-  background: none;
-  position: absolute;
-  top: 0px;
-  left: 0;
+    background: none;
   height: 50px;
   width: 50px;
-  padding: 0;
   border-radius: 100%;
   outline: 0;
   border: 0;
-  color: inherit;
   cursor: pointer;
   -webkit-transition: 0.2s ease-in-out;
   transition: 0.2s ease-in-out;
@@ -74,7 +70,7 @@ input {
 }
 
 .search:before {
-  content: "";
+  content: " ";
   position: absolute;
   width: 20px;
   height: 4px;
