pequenos detalles responsive

--- a/components/src/components/BarraNavegacion.astro
+++ b/components/src/components/BarraNavegacion.astro
@@ -41,6 +41,9 @@ import Filtro from "./market/filtro.astro";
     display: none;
   }
   @media all and (max-width: 720px) {
+    .form{
+      margin-bottom: 0rem;
+    }
     .search-form-filter {
       display: unset;
     }
