--- a/components/src/pages/jardineriaFernando.astro
+++ b/components/src/pages/jardineriaFernando.astro
@@ -36,7 +36,7 @@ const calificacion = "4.7"
 .container {
     max-width: 100%;
     margin-top: 50px;
-    padding: 2rem;
+    padding: 4rem;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
     display: flex;
@@ -106,7 +106,7 @@ strong {
 @media all and (max-width: 720px) {
     .container{
         max-width: 100%;
-    margin-top: 50px;
+    margin-top: 0rem;
     padding: 2rem;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
@@ -124,7 +124,9 @@ strong {
     .info h1{
         text-align: center;
     }
-
+    .profile{
+        margin:0;
+    }
 }
 
     
