logo de LABOROSO

--- a/components/src/components/NavLines.astro
+++ b/components/src/components/NavLines.astro
@@ -1,7 +1,7 @@
 ---
 import LocationSmall from "./location/locationSmall.astro";
 import MobileNav from "./MobileNav.astro";
-const pageTitle: string = "TQA";
+const pageTitle: string = "LABOROSO";
 ---
 <div id="container">
     <div class="navLines" id="navLines">
