--- a/components/src/components/header.astro
+++ b/components/src/components/header.astro
@@ -1,5 +1,5 @@
 ---
-const pageTitle:string = "TQA"
+const pageTitle:string = "LABOROSO"
 import NavLines from "./NavLines.astro";
 ---
 <header id="container">
