--- a/components/src/layouts/BaseLayout.astro
+++ b/components/src/layouts/BaseLayout.astro
@@ -12,8 +12,9 @@ const {pageTitle} = Astro.props
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'></link>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"/>
     <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content = {Astro.generator} >     
+    <meta name="generator" content = {Astro.generator} >
     <title>{pageTitle}</title>
+    <link rel="shortcut icon" href="whiteLogo.png">
   </head>
   <body>
     <Header />
