--- a/components/src/pages/index.astro
+++ b/components/src/pages/index.astro
@@ -1,12 +1,12 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
-const pageTitle = "Trabajos Que Ayudan";
+const pageTitle = "LABOROSO";
 ---
 <BaseLayout pageTitle={pageTitle}>
 
   <section class="hero">
     <div class="text"> 
-      <h1>Trabajos Que Ayudan</h1>
+      <h1>LABOROSO</h1>
       <p>Viva siempre el trabajo y la paz</p>
       <a href="#" class="btn">Shop Now</a>
       
