--- a/components/src/components/Navigation.astro
+++ b/components/src/components/Navigation.astro
@@ -12,7 +12,9 @@
             <li><a href="servicios">Servicios</a></li>
             <li><a href="#">Ser Proveedor</a></li>
             <li><a href="#">Iniciar Sesion</a></li>
-            <li><a href="#">Carrito</a></li>
+            <li><a href="#">wallet</a></li>
+            <li><a href="#">historial</a></li>
+            <li><a href="#">cuenta y seguridad</a></li>
         </ul>
     </nav>
 </div>
