--- a/components/src/components/MobileNav.astro
+++ b/components/src/components/MobileNav.astro
@@ -22,8 +22,10 @@ const pageTitle: string = "TQA";
                             <li><a href="/">Home</a></li>
                             <li><a href="servicios">Servicios</a></li>
                             <li><a href="#">Ser Proveedor</a></li>
-                            <li><a href="#">Carrito</a></li>
                             <li><a href="signup">registrarse</a></li>
+                            <li><a href="#">wallet</a></li>
+                            <li><a href="#">historial</a></li>
+                            <li><a href="#">cuenta y seguridad</a></li>
                         </ul>
                     </nav>
                 </div>
