--- a/components/src/components/SearchBar.astro
+++ b/components/src/components/SearchBar.astro
@@ -16,7 +16,7 @@
     right: 0;
     width: 80px;
     height: 80px;
-    background: #e7abb7;
+    background: #72431c;
     border-radius: 50%;
     transition: all 1.3s;
     z-index: 4;
