--- a/components/src/pages/signup.astro
+++ b/components/src/pages/signup.astro
@@ -1,6 +1,6 @@
 ---
 import BarraNavegacion from '../components/BarraNavegacion.astro';
-import Tiles from '../components/Tiles.astro';
+import Tiles from '../components/market/Tiles.astro';
 import BaseLayout from '../layouts/BaseLayout.astro';
 import TodosLosServicios from '../components/Servicios/TodosLosServicios.astro';
 import Filtro from '../components/market/filtro.astro'
