first part profile

--- a/components/src/components/MobileNav.astro
+++ b/components/src/components/MobileNav.astro
@@ -15,12 +15,9 @@
                     <nav>
                         <ul id="mobileMenu">
                             <li><a href="/">Home</a></li>
-                            <li><a href="servicios">Servicios</a></li>
-                            <li><a href="#">Ser Proveedor</a></li>
-                            <li><a href="signup">registrarse</a></li>
-                            <li><a href="#">wallet</a></li>
-                            <li><a href="#">historial</a></li>
-                            <li><a href="#">cuenta y seguridad</a></li>
+                            <li><a href="/servicios">Servicios</a></li>
+                            <li><a href="/signup">Ser proveedor y registrarse</a></li>
+                            <li><a href="/provider/perfil">cuenta y seguridad</a></li>
                         </ul>
                     </nav>
                 </div>
