--- a/components/src/components/SearchBar.astro
+++ b/components/src/components/SearchBar.astro
@@ -1,5 +1,5 @@
 <div class="container">
-  <input type="text" placeholder="Search...">
+  <input type="text" placeholder="Search">
   <div class="search"></div>
 </div>
 
@@ -19,9 +19,9 @@
     background: #72431c;
     border-radius: 50%;
     transition: all 1s;
-    z-index: 4;
+    z-index: 0.5;
     box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.4);
-    // box-shadow: 0 0 25px 0 crimson;
+    // box-shadow: 0 0 25px 0 black;
     &:hover {
       cursor: pointer;
     }
@@ -67,13 +67,13 @@
     outline: none;
     border: none;
     // border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-    background: crimson;
-    color: white;
-    text-shadow: 0 0 10px crimson;
+    background: white;
+    color: black;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     padding: 0 80px 0 20px;
     border-radius: 30px;
-    box-shadow: 0 0 25px 0 crimson,
-                0 20px 25px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.1),
+                0 20px 25px 0 rgba(0, 0, 0, 0.1);
     // box-shadow: inset 0 0 25px 0 rgba(0, 0, 0, 0.5);
     transition: all 1s;
     opacity: 0;
@@ -109,7 +109,7 @@
       }
     }
     &::placeholder {
-      color: white;
+      color: black;
       opacity: 0.5;
       font-weight: bolder;
     }
