--- a/components/src/layouts/BaseLayout.astro
+++ b/components/src/layouts/BaseLayout.astro
@@ -2,7 +2,7 @@
 import '../styles/global.css';
 import Footer from "../components/base/footer.astro";
 import Header from "../components/base/header.astro";
-const {pageTitle} = Astro.props
+const {pageTitle, footer = true, header = true} = Astro.props
 ---
 <html lang="en">
   <head>
@@ -17,8 +17,12 @@ const {pageTitle} = Astro.props
     <link rel="shortcut icon" href="whiteLogo.png">
   </head>
   <body>
-    <Header />
+    {header === true && <Header />}
 	<slot />
-	<Footer />
+  {footer === true && <Footer />}
   </body>
 </html>
+
+<script>
+
+</script>
