--- a/components/src/layouts/BaseLayout.astro
+++ b/components/src/layouts/BaseLayout.astro
@@ -1,7 +1,7 @@
 ---
 import '../styles/global.css';
-import Footer from "../components/footer.astro";
-import Header from "../components/header.astro";
+import Footer from "../components/base/footer.astro";
+import Header from "../components/base/header.astro";
 const {pageTitle} = Astro.props
 ---
 <html lang="en">
