--- a/components/src/components/base/NavLines.astro
+++ b/components/src/components/base/NavLines.astro
@@ -1,6 +1,5 @@
 ---
-import LocationSmall from "./location/locationSmall.astro";
-import MobileNav from "./MobileNav.astro";
+import ModalNav from "./ModalNav.astro";
 const pageTitle: string = "LABOROSO";
 ---
 <div id="container">
@@ -13,7 +12,7 @@ const pageTitle: string = "LABOROSO";
             <a href="#" id="navIcon" class="nav-icon-000 hidden">&#9932;</a> -->
         </div>
         
-        <MobileNav />
+        <ModalNav />
     </div>
 </div>
 
