--- a/components/src/layouts/ServicioLayout.astro
+++ b/components/src/layouts/ServicioLayout.astro
@@ -1,7 +1,7 @@
 ---
 import '../styles/global.css';
-import Footer from "../components/footer.astro";
-import Header from "../components/header.astro";
+import Footer from "../components/base/footer.astro";
+import Header from "../components/base/header.astro";
 import BarraNavegacion from '../components/BarraNavegacion.astro';
 const {pageTitle} = Astro.props
 ---
