--- a/components/src/pages/index.astro
+++ b/components/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import SearchBar from '../components/SearchBar.astro';
+import SearchBar from '../components/base/SearchBar.astro';
 import BaseLayout from '../layouts/BaseLayout.astro';
 const pageTitle = "LABOROSO";
 ---
