--- a/components/src/components/forms/CreaAnuncio.astro
+++ b/components/src/components/forms/CreaAnuncio.astro
@@ -1,6 +1,6 @@
 ---
 
-
+const {categories} = Astro.props
 ---
 
 
@@ -8,11 +8,11 @@
     <h2>Formulario de Usuarios</h2>
     <form  method="POST" id="user-form">
       <div class="form-group">
-        <label for="nombre">Nombre:</label>
+        <label for="nombre">Nombre del anuncio:</label>
         <input type="text" id="nombre" name="nombre" required />
       </div>
       <div class="form-group">
-        <label for="apellido">Apellido:</label>
+        <label for="apellido">:</label>
         <input type="text" id="apellido" name="apellido" required />
       </div>
       <div class="form-group">
@@ -54,6 +54,16 @@
       <div class="form-group">
         <label for="canton">Cantón:</label>
         <input type="text" id="canton" name="canton" required />
+      </div>
+      <div class="form-group">
+        <label for="servicio">Categoría de servicio:</label>
+        <select id="servicio" name="servicio" required>
+          <option value="">Seleccione una categoría</option>
+          {categories.map((item:any) => 
+          (<option value={item}>{item}</option>)
+          )}
+
+        </select>
       </div>
   
       <div class="form-group">
@@ -118,3 +128,4 @@
       margin-top: 5px;
     }
   </style>
+
