--- a/components/src/pages/anuncio.astro
+++ b/components/src/pages/anuncio.astro
@@ -2,9 +2,11 @@
 import CreaAnuncio from "../components/forms/creaAnuncio.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
 // const footer = false;
+const categories = ["Jardineria", "Comida", "Educacion", "Belleza", "Decoracion"];  
 ---
 <BaseLayout footer={false} header={true}>
     
     <h2>Crea tu anuncio</h2>
-    <CreaAnuncio />
+    
+    <CreaAnuncio categories={categories}/>
 </BaseLayout>
