--- a/components/src/components/base/NavLines.astro
+++ b/components/src/components/base/NavLines.astro
@@ -5,7 +5,7 @@ const pageTitle: string = "LABOROSO";
 <div id="container">
     <div class="navLines" id="navLines">
         <div>
-            <a id="logo">{pageTitle}</a>
+            <a id="logo"><img class="logo-image" src="../blackLogo.png"></img>{pageTitle}</a>
         </div>
         <div class="nav-icon menu-icon" id="menu-toggle">
             <!-- <a href="#" id="navIcon" class="nav-icon-000">&#9776;</a>
