--- a/components/src/components/base/NavLines.astro
+++ b/components/src/components/base/NavLines.astro
@@ -5,7 +5,7 @@ const pageTitle: string = "LABOROSO";
 <div id="container">
     <div class="navLines" id="navLines">
         <div>
-            <a id="logo"><img class="logo-image" src="../blackLogo.png"></img>{pageTitle}</a>
+            <a id="logo" href="/"><img class="logo-image" src="../blackLogo.png"></img></a>
         </div>
         <div class="nav-icon menu-icon" id="menu-toggle">
             <!-- <a href="#" id="navIcon" class="nav-icon-000">&#9776;</a>
@@ -15,13 +15,3 @@ const pageTitle: string = "LABOROSO";
         <ModalNav />
     </div>
 </div>
-
-<style>
-    #logo {
-        color: #130909;
-        text-decoration: none;
-        font-size: 2rem;
-        font-weight: bold;
-    }
-
-</style>
