--- a/components/src/Styles/global.css
+++ b/components/src/Styles/global.css
@@ -4,7 +4,7 @@ header{
 }
 
 .logo-image{
-  height: 1.5rem;
+  height: 6rem;
 }
 
 h1 {
@@ -145,37 +145,18 @@ p {
     display: none;
   }
   
-  /* @media all and (max-width: 720px) {
-    #container {
-      flex-direction: column;
-      align-items: flex-start;
-    }
-    nav {
-      height: 0;
-      width: 100%;
-      overflow: hidden;
-      transition: 250ms height ease-in-out;
-      margin-left: 1rem;
-      display: block;
-    }
-    nav ul li {
-      margin-left: 1rem;
-      display: block;
-      align-items: center;
-      padding: 1em;
-      align-items: center;
+   @media all and (max-width: 720px) {
+    .logo-image{
+      height: 5rem;
     }
 
-     li  {
-      display: block;
-      text-align: center;
+    .hero  .text h1{
+  
+      font-family: "inter";
+      font-size: 3rem;
+      margin-top: 0;
     }
-    .menu-icon{
-      display: block;
-    }
-
-    
-  } */
+  }
   
   .flex-container-servicio{
     display: flex;
@@ -230,10 +211,9 @@ p {
   }
   .hero  .text h1{
   
-    font-family: "Playfair Display";
-    font-style: normal;
-    font-variant: normal;
-    margin-bottom: 1rem;
+    font-family: "inter";
+    font-size: 4.5rem;
+    margin-top: 0;
   }
   .hero  .text p{
     font-family: 'inter';
