--- a/components/src/pages/index.astro
+++ b/components/src/pages/index.astro
@@ -1,71 +1,17 @@
 ---
 import SearchBar from '../components/base/SearchBar.astro';
 import BaseLayout from '../layouts/BaseLayout.astro';
+import Benefits from '../components/informacion/Benefits.astro';
+import Next from '../components/informacion/Next.astro';
+import Hero from '../components/informacion/Hero.astro';
+import FeaturedProducts from '../components/informacion/FeaturedProducts.astro';
 const pageTitle = "LABOROSO";
 ---
 <BaseLayout pageTitle={pageTitle}>
 
-  <section class="hero">
-    <div class="text"> 
-      <h1>LABOROSO</h1>
-      <p>Viva siempre el trabajo y la paz</p>
-      <SearchBar />
-    </div>
-    
-    <img src="https://res.cloudinary.com/sagacity/image/upload/c_crop,h_3333,w_5000,x_0,y_0/c_limit,dpr_2.625,f_auto,fl_lossy,q_80,w_412/SeptemberShop-courtesy_gb1yug.jpg" alt="Product 1">
-  </section>
+<Hero />
 
-  <section class="featured-products">
-    <h2>Featured Products</h2>
-    <div class="product">
-      <img src="https://www.next.ua/nxtcms/resource/blob/5457772/773eea382144c6a1a7fda458ab8a93ba/multipacks-data.jpg" alt="Product 1">
-      <h3>Product 1</h3>
-      <p>Description of product 1.</p>
-     
-    </div>
-    <div class="product">
-      <img src="https://cdn.shopify.com/s/files/1/0660/8738/7355/products/H411f9acb8fc74f3fafea70c62e2e71f2I_095ebfdb-4f90-42b3-8c93-58ce3c544d37.jpg?v=1673492257" alt="Product 2">
-      <h3>Product 2</h3>
-      <p>Description of product 2.</p>
-  
-    </div>
-  </section>
-
-  <section class="next">
-       
-    <div class="text"> 
-      <h1>Featured things</h1>
-      <blockquote>A completely new <span style="font-style: italic;">experience</span> for buying trending clothing </blockquote>
-    </div>
-    
-    <div class="product">
-      <img src="https://i.etsystatic.com/11135918/r/il/b941e4/3853153906/il_fullxfull.3853153906_8tg2.jpg" alt="Product 3">
-      <h3>cool shirt</h3>
-      <p>15$</p>
-    </div>
-    <div class="product">
-      <img src="https://i.etsystatic.com/11135918/r/il/b941e4/3853153906/il_fullxfull.3853153906_8tg2.jpg" alt="Product 3">
-      <h3>Other cool shirt</h3>
-      <p>10$</p>
-    </div>
-  </section>
-
-  <section class="benefits">
-    <h2>Our Benefits</h2>
-    <div class="benefit">
-      <img src="https://cdn.vox-cdn.com/thumbor/Stn4BvUwDgFAlTJ8zSfLvsBggak=/1400x1400/filters:format(jpeg)/cdn.vox-cdn.com/uploads/chorus_asset/file/9199167/white.jpg" alt="Benefit 1">
-      <h3>Free Shipping</h3>
-      <p>Enjoy free shipping on all orders.</p>
-    </div>
-    <div class="benefit">
-      <img src="https://cdn.vox-cdn.com/thumbor/Stn4BvUwDgFAlTJ8zSfLvsBggak=/1400x1400/filters:format(jpeg)/cdn.vox-cdn.com/uploads/chorus_asset/file/9199167/white.jpg" alt="Benefit 2">
-      <h3>Easy Returns</h3>
-      <p>Return or exchange items hassle-free.</p>
-    </div>
-    <div class="benefit">
-      <img src="https://cdn.vox-cdn.com/thumbor/Stn4BvUwDgFAlTJ8zSfLvsBggak=/1400x1400/filters:format(jpeg)/cdn.vox-cdn.com/uploads/chorus_asset/file/9199167/white.jpg" alt="Benefit 3">
-      <h3>24/7 Customer Support</h3>
-      <p>Get support whenever you need it.</p>
-    </div>
-  </section>
+<FeaturedProducts />
+<Next />
+<Benefits />
 </BaseLayout>
