--- a/components/src/components/base/ModalNav.astro
+++ b/components/src/components/base/ModalNav.astro
@@ -68,10 +68,18 @@
             justify-content: space-between;
             align-items: center;
             padding: 10px;
+            
+    }
+    #logo {
+        color: #130909;
+        text-decoration: none;
+        font-size: 1.5em;
+        font-weight: bold;
     }
     #btn-icon {
         border-radius: 10%;
         width: auto;
+        
     }
     /* Full-width input fields */
     input[type="text"],
