--- a/components/src/pages/provider/perfil.astro
+++ b/components/src/pages/provider/perfil.astro
@@ -21,7 +21,8 @@ const calificacion = "4.7"
         <div class="container-anuncios">
             <div class="titulo-anuncios-crear-boton">
                 <h2>Anuncios publicados:</h2>
-                <button class="crear-anuncio-button">Crear anuncio</button>
+                <a href="/anuncio"><button class="crear-anuncio-button">Crear anuncio</button></a>
+                
             </div>
             <div class="anuncio">
                 <img src="https://st4.depositphotos.com/1017986/39200/i/450/depositphotos_392006782-stock-photo-happy-man-in-apron-at.jpg" alt="Benefit 2" class="imagen-cuadro-servicio">
